--- a/src/templates/layout.html.twig
+++ b/src/templates/layout.html.twig
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>cyklotrasy</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>cyklotrasy</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    {% block stylesheets %}
         <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body>
-        {% block content %}{% endblock %}
-    </body>
+    {% endblock %}
+</head>
+<body>
+{% block content %}{% endblock %}
+{% block javascripts %}{% endblock %}
+</body>
 </html>
