--- a/src/templates/track.html.twig
+++ b/src/templates/track.html.twig
@@ -5,13 +5,60 @@
     {{ track.description|raw }}
 
     {% if track.gpx %}
-    <p><strong>GPX súbor:</strong> <a href="{{ track.public_path ~ '/' ~ track.gpx }}">{{ track.gpx }}</a></p>
+        <p><strong>GPX súbor:</strong> <a href="{{ track.public_path ~ '/' ~ track.gpx }}">{{ track.gpx }}</a></p>
     {% endif %}
+
+    <div id="map"></div>
 
     {% if track.images %}
-        {% for image in track.images %}
-            <img class="img" src="{{ track.public_path ~ '/' ~ image }}" />
-        {% endfor %}
+        <div id="gallery">
+            {% for image in track.images %}
+                <a href="{{ track.public_path ~ '/' ~ image }}">
+                    <img class="img" src="{{ track.public_path ~ '/' ~ image }}"/>
+                </a>
+            {% endfor %}
+        </div>
     {% endif %}
 
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
+    <script src="https://rawgithub.com/mpetazzoni/leaflet-gpx/master/gpx.js"></script>
+    <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js"></script>
+    <script src="assets/js/zepto.min.js"></script>
+    <script src="assets/js/magnific-popup.min.js"></script>
+    <script>
+        var map = L.map('map', {
+            fullscreenControl: true
+        });
+        L.tileLayer('http://t{s}.freemap.sk/T/{z}/{x}/{y}.jpeg', {
+            attribution: 'Map data &copy; <a href="http://www.osm.org">OpenStreetMap</a>'
+        }).addTo(map);
+
+        var gpx = '{{ track.public_path ~ '/' ~ track.gpx }}';
+        new L.GPX(gpx, {
+            async: true,
+            marker_options: {
+                startIconUrl: 'assets/img/pin-icon-start.png',
+                endIconUrl: 'assets/img/pin-icon-end.png',
+                shadowUrl: 'assets/img/pin-shadow.png'
+            }
+        }).on('loaded', function (e) {
+            map.fitBounds(e.target.getBounds());
+        }).addTo(map);
+
+        $('#gallery').magnificPopup({
+            delegate: 'a',
+            type: 'image'
+        });
+    </script>
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css"/>
+    <link href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css"
+          rel="stylesheet"/>
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
 {% endblock %}
