--- a/src/templates/track.html.twig
+++ b/src/templates/track.html.twig
@@ -72,7 +72,10 @@
 
         $('#gallery').magnificPopup({
             delegate: 'a',
-            type: 'image'
+            type: 'image',
+            gallery: {
+              enabled: true
+            }
         });
     </script>
 {% endblock %}
