--- a/src/templates/tracks.html.twig
+++ b/src/templates/tracks.html.twig
@@ -1,14 +1,19 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Zoznam cyklotrás</h1>
-    <ul class="tracks">
-        {% for track in tracks %}
+    <section class="text">
+        <h1 class="mdl-typography--display-3">Zoznam cyklotrás</h1>
+        <ul class="tracks mdl-list">
+            {% for track in tracks %}
 
-        <li class="track">
-            <a href="?p={{ track.basename }}">{{ track.name }}</a>
-        </li>
+                <li class="track mdl-list__item">
+            <span class="mdl-list__item-primary-content">
+                <i class="mdl-list__item-icon material-icons">directions_bike</i>
+                <a href="?p={{ track.basename }}">{{ track.name }}</a>
+            </span>
+                </li>
 
-        {% endfor %}
-    </ul>
+            {% endfor %}
+        </ul>
+    </section>
 {% endblock %}
