--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,9 @@ ul.tracks {
 #gallery img {
     max-width: 100%;
     width: 100%;
+    max-height: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #popis { margin-bottom: 2em; }
